# subio

./: .gitignore  AGENTS.md  DEV.md  Makefile  README.md  TESTING.md  config.example.toml  filter.py  generate_mihomo_protocols.py  generate_mihomo_protocols_v2.py  main.py  map.json  mapgen.sh  mihomo_all_protocols.yaml  mihomo_all_protocols_v2.yaml  pyproject.toml  pytest.ini  run.py  test.json  test_config.toml  v2_plan.md  wg
.claude/: settings.local.json
.github/workflows/: python-publish.yml
app/: filter.py  log.py  tools.py  transform.py  upload.py  validate.py
app/parser/: clash.py
docs/: protocol.md
example/: config.toml
example/provider/: meta.yaml  multiuser.yml  nodes.json5  self.toml  surge.conf  v2rayn.txt
example/snippet/: ai  apple  pt  test_snippet
example/template/: clash.yaml  (+5 more)
mapgen/: allow_values.json  clash.json  clash.py  meta.json  meta.py  meta.yaml  stash.yaml
parser/: clash.py  clash_common.py
tests/: README.md  test_basic.py  test_filters.py  test_performance.py  test_ruleset.py  test_subio2.py  test_subio_v2_emitter_dae.py  test_subio_v2_emitter_factory.py  test_subio_v2_filters_api.py  test_subio_v2_main.py  test_subio_v2_model_nodes.py  test_subio_v2_parser_clash.py  test_subio_v2_parser_clash_all_protocols.py  test_subio_v2_parser_clash_combos.py  test_subio_v2_parser_clash_comprehensive.py  test_subio_v2_parser_clash_full_coverage.py  test_subio_v2_parser_factory.py  test_subio_v2_parser_subio.py  test_subio_v2_parser_surge.py  test_subio_v2_parser_v2rayn.py  test_subio_v2_processor_common.py  test_subio_v2_template_ruleset.py  test_subio_v2_template_ruleset_dae.py  test_subio_v2_workflow_engine.py  test_subio_v2_workflow_fetch.py  test_subio_v2_workflow_upload.py
transform/: clash-meta.py  clash.py
(+223 files in other folders)
