[tool.poetry]
name = "subio"
version = "0.1.0"
description = "A simple command line tool for convert proxy subscription links."
authors = ["Ekko <beijiu572@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dacite = "^1.7.0"
jinja2 = "^3.1.2"
json5 = "^0.9.6"
requests = "^2.26.0"
toml = "^0.10.2"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
subio = "subio.main:run"